tests/fixtures/invalid/primitive_multiple_typos.avsc
{
  "type": "record",
  "name": "TestMultipleTypos",
  "fields": [
    {
      "name": "field1",
      "type": {
        "type": "lon"
      }
    },
    {
      "name": "field2",
      "type": {
        "type": "flot"
      }
    },
    {
      "name": "field3",
      "type": {
        "type": "nul"
      }
    }
  ]
}
